--- a/style.css
+++ b/style.css
@@ -4,7 +4,11 @@
   box-sizing: border-box;
   border-radius: 3px;
   border-color: gainsboro;
-  font-family: "Open Sans", sans-serif;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+header h2 {
+  padding: 20px 20px 20px 20px;
+  text-align: center;
 }
 body {
   background-color: #f9fafb;
@@ -17,12 +21,14 @@ body {
   margin: 0 auto;
   margin-top: 50px;
   border-radius: 15px;
+
+
 }
-h1 {
+h2 {
   margin-top: 20px;
   min-height: 50px;
   text-align: center;
-  background: linear-gradient(to right, rgb(109, 109, 201), rgb(84, 84, 230));
+  background: linear-gradient(to right, rgb(85, 85, 197), rgb(138, 138, 214));
   color: white;
 }
 form {
@@ -35,10 +41,10 @@ form {
   margin-bottom: 10px;
 }
 button {
-  margin-top: 30px;
+  margin-top: 10px;
 }
 button:hover {
-  background: linear-gradient(to left, rgb(109, 109, 201), rgb(84, 84, 230));
+  background: linear-gradient(to left, rgb(85, 85, 197), rgb(138, 138, 214));
 }
 button {
   min-height: 30px;
